Add Api and render list item

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testing React Native on the Web!</title>
+    <title>Drop Welcome Test</title>
     <meta charset="utf-8" />
     <meta content="initial-scale=1,width=device-width" name="viewport" />
   </head>
